chnages made for college

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -15,5 +15,10 @@
   "Search": "Search",
   "English": "English",
   "Hindi": "Hindi",
-  "Gujarati": "Gujarati"
+  "Gujarati": "Gujarati",
+  "Search For Profile" :"Search For Profile",
+  "View Products" :"View Products",
+  "Market Place" : "Market Place",
+  "Github Profile Finder" :"GitHub Profile Finder",
+  "SUBMIT" : "Submit"
 }
