--- a/src/language/gu-Gujarati.json
+++ b/src/language/gu-Gujarati.json
@@ -15,5 +15,10 @@
   "Search": "શોધો",
   "English": "અંગ્રેજી",
   "Hindi": "હિન્દી",
-  "Gujarati": "ગુજરાતી"
+  "Gujarati": "ગુજરાતી",
+  "Search For Profile":"પ્રોફાઇલ શોધો",
+  "View Products":"ઉત્પાદો જોવો",
+  "Market Place":"બજાર",
+  "Github Profile Finder" :"ગિટહબ પ્રોફાઈલ શોધક",
+  "SUBMIT" : "સબમિટ કરો"
 }
