--- a/src/language/hi-Hindi.json
+++ b/src/language/hi-Hindi.json
@@ -15,5 +15,10 @@
   "Search": "खोजें",
   "English": "अंग्रेज़ी",
   "Hindi": "हिन्दी",
-  "Gujarati": "ગુજરાતી"
+  "Gujarati": "ગુજરાતી",
+  "Search For Profile":"प्रोफ़ाइल खोजें",
+  "View Products" :" उत्पाद देखें",
+  "Market Place":"बाज़ार",
+  "Github Profile Finder" :"गिटहब प्रोफ़ाइल खोजक",
+  "SUBMIT":"प्रस्तुत करें"
 }
